--- a/templates/view_all.html
+++ b/templates/view_all.html
@@ -4,17 +4,17 @@
     <title>View All Records</title>
 </head>
 <body>
-    <h2>View All Records</h2>
+    <h2>Все записи из базы данных</h2>
     <table>
         <thead>
             <tr>
-                <th>IP Address</th>
-                <th>Date</th>
-                <th>request_method</th>
-                <th>url</th>
-                <th>http_version</th>
-                <th>status_code</th>
-                <th>response_size</th>
+                <th>IP-Адрес</th>
+                <th>Дата</th>
+                <th>Метод запроса</th>
+                <th>URL</th>
+                <th>Версия HTTP</th>
+                <th>Код статуса HTTP</th>
+                <th>Размер HTTP ответа</th>
             </tr>
         </thead>
         <tbody>
