--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,29 @@
 <html>
 <head>
     <title>Apache Parser</title>
+    <style>
+        body {
+            background-color: black;
+            color: white;
+        }
+
+        h1, p {
+            color: white;
+        }
+
+        button {
+            background-color: black;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            margin-bottom: 10px;
+        }
+
+        button:hover {
+            background-color: #333333;
+        }
+    </style>
 </head>
 <body>
     <h1>Главная страница</h1>
