--- a/templates/ip_addresses.html
+++ b/templates/ip_addresses.html
@@ -2,6 +2,34 @@
 <html>
 <head>
   <title>IP Addresses</title>
+  <style>
+    body {
+      background-color: #000;
+      color: #fff;
+      font-family: Arial, sans-serif;
+    }
+
+    h1 {
+      font-size: 24px;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    li {
+      font-size: 18px;
+      margin-bottom: 10px;
+    }
+
+    li:before {
+      content: "- ";
+    }
+  </style>
 </head>
 <body>
   <h1>Выборка по IP-адресам</h1>
