--- a/templates/view_all.html
+++ b/templates/view_all.html
@@ -2,6 +2,40 @@
 <html>
 <head>
     <title>View All Records</title>
+    <style>
+        body {
+            background-color: black;
+            color: white;
+        }
+
+        h2 {
+            color: white;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            color: white;
+        }
+
+        th, td {
+            padding: 8px;
+            text-align: left;
+            border-bottom: 1px solid white;
+        }
+
+        th {
+            background-color: black;
+        }
+
+        tr:nth-child(even) {
+            background-color: #333333;
+        }
+
+        tr:hover {
+            background-color: #666666;
+        }
+    </style>
 </head>
 <body>
     <h2>Все записи из базы данных</h2>
